# copier-python-poetry

./: .bumpversion.cfg  .copier-answers.yml  .editorconfig  .envrc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.addon.strict.yaml  .pre-commit-config.standard.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  cookiecutter.json  copier.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json  post-create.sh
.gitlab/merge_request_templates/: default.md
hooks/: post_gen_project.py  pre_gen_project.py
template/: .bumpversion.cfg  .editorconfig  .envrc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.addon.strict.yaml  .pre-commit-config.standard.yaml  .pre-commit-config.yaml  .python-version  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  {% if generate_dockerfile %}Dockerfile{% endif %}  {% if generate_docs %}mkdocs.yml{% endif %}  {% if generate_docs == "mkdocs" %}mkdocs.yml{% endif %}  {% if git_hosting == 'bitbucket' %}bitbucket-pipelines.yml{% endif %}  {% if git_hosting == 'github' %}github-pipelines.yml{% endif %}  {% if git_hosting == 'github' %}github-workflows-ci.yml{% endif %}  {% if git_hosting == 'gitlab' %}.gitlab-ci.yml{% endif %}  {% if license != 'LicenseRef-Proprietary' %}LICENSE{% endif %}  {% if license != 'Proprietary' %}LICENSE{% endif %}
template/.devcontainer/: devcontainer.json  post-create.sh
template/src/: tesa.py  {% if generate_example_code %}{{ package_name | replace('.', _copier_conf.sep) }}{{ _copier_conf.sep }}core.py{% endif %}  {% if generate_example_code %}{{ package_name }}{{ _copier_conf.sep }}core.py{% endif %}  {% if package_type == 'cli' %}{{ package_name | replace('.', _copier_conf.sep) }}{{ _copier_conf.sep }}cli.py{% endif %}  {{ package_name | replace('.', _copier_conf.sep) }}{{ _copier_conf.sep }}__init__.py  {{ package_name | replace('.', _copier_conf.sep) }}{{ _copier_conf.sep }}logs.py  {{ package_name }}{{ _copier_conf.sep }}{% if package_type == 'cli' %}cli.py{% endif %}
template/src/{{package_name}}/: logs.py  {% if package_type == 'cli' %}cli.py{% endif %}  {{package_name}}.py
template/tests/: test_{{package_name}}.py  {% if generate_example_code %}test_{{ package_name | replace('.', '_')}}.py{% endif %}  {% if generate_example_code %}test_{{package_name}}.py{% endif %}
template/{% if generate_dockerfile %}scripts{% endif %}/: entrypoint.sh
template/{% if generate_docs != "none" %}docs{% endif %}/{% if generate_docs == "mkdocs" %}scripts{% endif %}/: readme_as_index.py
template/{% if generate_docs %}docs{% endif %}/: {% if generate_example_code %}user_guide.md{% endif %}
template/{% if generate_docs %}docs{% endif %}/scripts/: gen_ref_pages.py  readme_as_index.py
template/{% if git_hosting == 'github' %}.github{% endif %}/{% if git_hosting == 'github' %}workflows{% endif %}/: {% if git_hosting == 'github' %}ci.yml{% endif %}
template/{% if ide == 'vscode' %}.vscode{% endif %}/: extensions.json  settings.json
template/{% if use_jupyter_notebook %}notebooks{% endif %}/: example_notebook.ipynb
template/{% if use_jupyter_notebooks %}.git{% endif %}/: config
template/{% if use_jupyter_notebooks %}notebooks{% endif %}/: {% if generate_example_code %}example_notebook.ipynb{% endif %}
template/{{package_name}}/: {% if package_type == 'cli' %}cli.py{% endif %}  {{package_name}}.py
tests/: conftest.py  test_bake_project.py  test_copier_validator.py  test_make_commands.py
{{cookiecutter.repository_name}}/: .bumpversion.cfg  .flake8  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  Vagrantfile  pyproject.toml
{{cookiecutter.repository_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.repository_name}}/ansible/: deploy-dev.yml  deploy.yml  inventory.yml  provision-deploy  provision.yml
{{cookiecutter.repository_name}}/ansible/roles/become_user/: tasks.yml
{{cookiecutter.repository_name}}/ansible/roles/pipx/tasks/: main.yml
{{cookiecutter.repository_name}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/: {{cookiecutter.package_name}}.py
{{cookiecutter.repository_name}}/{{cookiecutter.project_slug}}/: cli.py  logs.py  {{cookiecutter.project_slug}}.py
