[tool.poetry]
name = "cookiecutter-python"
version = "0.2.0"
description = "Opinionated cookiecutter for python projects"
authors = ["Simone Gaiarin <simone.gaiarin@trovaprezzi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
copier = "^8.1.0"
bump2version = "^1.0.1"

[tool.poetry.group.dev.dependencies]
cookiecutter = "^2.1.1"
pytest = "^7.2.0"
pytest-cookies = "^0.6.1"
black = "^22.12.0"
isort = "^5.11.2"
pre-commit = "^2.20.0"
flake8 = "^6.0.0"
pytest-copier = "^0.1.0"
detect-secrets = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
markers = [
    "slow: slow tests",
]

[tool.isort]
profile = "black"
