[tool.poetry]
name = "copier-python-template"
version = "1.3.0"
description = "Opinionated copier template for python projects"
authors = [
  "Ali Cem <ac@flowtale.ai>",
  "Anders Stendevad <as@flowtale.ai>",
  "Dmytro Kyrychuk <dmytro@flowtale.ai>",
  "Franz Maria Heuchel <fmh@flowtale.ai>",
  "Nikita Pekarchuk <np@flowtale.ai>",
  "Rasmus Jones <rj@flowtale.ai>",
  "Rogvi David Arge <rda@flowtale.ai>",
  "Simone Gaiarin <sg@flowtale.ai>",
  "Tobias Rehfeldt <tc@flowtale.ai>",
  "Vladyslav Kromkach <vk@flowtale.ai>",
]
license = "MIT license"
packages = [{include = "template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
tox = "^4.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
flake8-builtins = "^2.1.0"
pep8-naming = "^0.13.3"
pytest-mock = "^3.11.1"
flake8-pytest-style = "^1.7.2"
black = "^22.1.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
pydocstyle = "^6.3.0"
bump2version = "^1.0.1"
copier = "^9.1.0"
pytest-copier = "^0.4.1"
detect-secrets = "^1.4.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
markers = [
    "slow: slow tests",
    "venv: tests that modify the virtual environment possibly causing interferences; should be run with tox",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D100,D103,D104"
convention = "google"
